--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap');
+
 .App {
-  text-align: center;
+  font-family: "Gideon Roman";
+  align-items: center;
+  background-color: #34568B;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+
 }
+.heading {
+  text-transform: uppercase;
+  font-size: 40px;
+  margin: 30px 0;
+  color: white;
+  z-index: 1;
+  text-align: center;
+
+}
+@media (max-width: 800px) { 
+  .heading {
+    margin: 15px 0;
+    font-size: 35px;
+
+  }
+} 
+
 
 .App-logo {
   height: 40vmin;
